# waypoint_package

./: .clang-format  .coveragerc  CMakeLists.txt  CODEOWNERS  Doxyfile  README.md  package.xml
.github/workflows/: workflow.yml
include/: main.hpp  structs.hpp
src/: callbacks.cpp  main.cpp  modes.cpp
