<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_package</name>
  <version>1.0.0</version>
  <description>Waypoint node responsible for flying to a specific waypoint</description>
  <maintainer email="phg6386@thi.de">philipp</maintainer>
  <license>MIT</license>
  <url>https://github.com/THI-Drone/waypoint_package</url>
  <author email="pgh6386@thi.de">philipp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>interfaces</depend>
  <depend>common_package</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
